committed by pankaj on 15 feb 24 for change password changes

--- a/SchoolAdmin/Adminpanel/Views/Shared/_LayoutPageAdmin.cshtml
+++ b/SchoolAdmin/Adminpanel/Views/Shared/_LayoutPageAdmin.cshtml
@@ -43,6 +43,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <li><a href="~/Admin/AboutUsMaster"> <i class="fa fa-tachometer"></i> About Us Master</a></li>
                             <li><a href="~/Admin/CourseMaster"> <i class="fa fa-tachometer"></i> Course Master</a></li>
                             <li><a href="~/Admin/GalleryMaster"> <i class="fa fa-tachometer"></i> Gallery Master</a></li>
+                            <li><a href="~/Admin/ChangePassword"> <i class="fa fa-tachometer"></i>Change Password</a></li>
 
                             @*<li>
             <a href="#"><i class="fa fa-cogs" aria-hidden="true"></i> UI Components <i class="fa fa-angle-down" aria-hidden="true"></i></a>
